--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   Instructions:
 
   - Save this file.
-  - Replace "USER" with your GitHub username.
-  - Replace "REPO" with your GitHub repo name.
+  - Replace "rburawes" with your GitHub rburawesname.
+  - Replace "rburawes.github.io" with your GitHub rburawes.github.io name.
   - Replace "Your Project" with your project name.
   - Upload this file (or commit to GitHub Pages).
 
@@ -18,7 +18,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Your Project</title>
+  <title>Using Spring ROO</title>
 
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -30,13 +30,13 @@
   <script src='http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js'></script>
 
   <!-- Meta -->
-  <meta content="Your Project" property="og:title">
-  <meta content="Your Project description goes here." name="description">
+  <meta content="Using Spring ROO" property="og:title">
+  <meta content="Tips and tutorials on how to use Spring ROO" name="description">
 
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('USER/REPO')
+      fetcher: Flatdoc.github('rburawes/rburawes.github.io')
     });
   </script>
 </head>
@@ -44,15 +44,15 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>Your Project</h1>
+      <h1>Using Spring ROO</h1>
       <ul>
-        <li><a href='https://github.com/USER/REPO'>View on GitHub</a></li>
-        <li><a href='https://github.com/USER/REPO/issues'>Issues</a></li>
+        <li><a href='https://github.com/rburawes/rburawes.github.io'>View on GitHub</a></li>
+        <li><a href='https://github.com/rburawes/rburawes.github.io/issues'>Issues</a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?rburawes=rburawes&amp;rburawes.github.io=rburawes.github.io&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
