--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/rburawes" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/rburawes/rburawes.github.io" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
