--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Spring ROO DB Reverse Engineering</h1>
-          <h2>Spring ROO DB Reverse Engineering</h2>
+          <h1>Spring ROO</h1>
+          <h2>DB Reverse Engineering</h2>
         </header>
 
         <section id="downloads" class="clearfix">
