--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Spring ROO DB Reverse Engineering by rburawes</title>
+    <title>Spring ROO DB Reverse Engineering rbs@fluidlabsph.io</title>
   </head>
 
   <body>
@@ -21,11 +21,6 @@
           <h1>Spring ROO</h1>
           <h2>DB Reverse Engineering</h2>
         </header>
-
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/rburawes/rburawes.github.io" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
         <hr>
 
         <section id="main_content">
